fixing spacing CSS

--- a/src/components/Game/styles.scss
+++ b/src/components/Game/styles.scss
@@ -12,12 +12,11 @@ $mid-gray: #474747;
     background-image: url("/images/Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
 }
 
 
 .time {
-    margin-top: 150px;
+    margin-top: 120px;
     color: $blue;
     text-align: center;
 }
@@ -50,7 +49,7 @@ $mid-gray: #474747;
 .end-game {
     display: flex;
     justify-content: center;
-    margin: 30px 0;
+    padding-bottom: 30px;
 }
 
 .play-again {
@@ -72,7 +71,6 @@ $mid-gray: #474747;
 .end-game__button {
     text-decoration: none;
     font-weight: bold;
-    margin-top: 30px;
     color: white;
     padding: 10px 20px;
     border-radius: 10px;
