--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -16,12 +16,13 @@ $orange: #ffb465;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .config__form {
     display: flex;
     flex-direction: column;
-    margin-top: 80px;
+    margin-top: 40px;
     justify-content: center;
     align-items: center;
 }
